--- a/action.yml
+++ b/action.yml
@@ -22,6 +22,7 @@ runs:
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
+      secrets:
         password: ${{ secrets.GITHUB_TOKEN }}
     - name: Docker Run
       id: docker-run
