--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -12,7 +12,13 @@ jobs:
         uses: ./
         with:
           validation-data: assets/data-correct.ttl
+        secrets: 
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Invalid data
         uses: ./
         with:
           validation-data: assets/data-incorrect.ttl
+        secrets: 
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
