--- a/action.yml
+++ b/action.yml
@@ -11,6 +11,7 @@ inputs:
     default: 'Test'
   github_token:
     description: 'GITHUB_TOKEN'
+    required: true
     default: '${{ secrets.GITHUB_TOKEN }}'
 outputs:
   validation-status:
@@ -25,7 +26,7 @@ runs:
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+        password: ${{ inputs.github_token }}
     - name: Docker Run
       id: docker-run
       shell: bash
