--- a/action.yml
+++ b/action.yml
@@ -12,7 +12,7 @@ inputs:
   github_token:
     description: 'GITHUB_TOKEN'
     required: true
-    default: '${{ secrets.GITHUB_TOKEN }}'
+    default: '${{ github.token }}'
 outputs:
   validation-status:
     description: 'Validation status: failed or passed'
