--- a/action.yml
+++ b/action.yml
@@ -31,4 +31,4 @@ runs:
       id: docker-run
       shell: bash
       run: |
-        echo "validation_report=$(docker run -v /var/run/docker.sock:/var/run/docker.sock ghcr.io/sdsc-ord/shacl:latest validate -datafile ${{ inputs.validation-data }} -shapesfile ${{ inputs.validation-rules }})" >> "$GITHUB_OUTPUT"
+        echo "validation_report=$(docker run -v /var/run/docker.sock:/var/run/docker.sock -v ${{ inputs.validation-data }}:${{ inputs.validation-data }} -v ${{ inputs.validation-rules }}:${{ inputs.validation-rules }} ghcr.io/sdsc-ord/shacl:latest validate -datafile ${{ inputs.validation-data }} -shapesfile ${{ inputs.validation-rules }})" >> "$GITHUB_OUTPUT"
