--- a/action.yml
+++ b/action.yml
@@ -29,7 +29,7 @@ runs:
     - if: ${{ inputs.validation-rules == 'None' }}
       shell: bash
       run: |
-        echo "validation_report=$(docker run -v /var/run/docker.sock:/var/run/docker.sock -v ${github.workspace}/${{ inputs.validation-data }}:/data/validation-data.ttl ghcr.io/sdsc-ord/shacl:latest validate -datafile /data/validation-data.ttl)" >> "$GITHUB_OUTPUT"
+        echo "validation_report=$(docker run -v /var/run/docker.sock:/var/run/docker.sock -v ${{ github.workspace }}/${{ inputs.validation-data }}:/data/validation-data.ttl ghcr.io/sdsc-ord/shacl:latest validate -datafile /data/validation-data.ttl)" >> "$GITHUB_OUTPUT"
     - if: ${{ inputs.validation-rules != 'None' }}
       shell: bash
       run: |
