Simplify action with no output

--- a/action.yml
+++ b/action.yml
@@ -29,12 +29,12 @@ runs:
     - if: ${{ inputs.validation-rules == 'None' }}
       shell: bash
       run: |
-        {
-          echo 'message<<EOF'
-          echo "$(docker run -v /var/run/docker.sock:/var/run/docker.sock -v ${{ github.workspace }}/${{ inputs.validation-data }}:/data/validation-data.ttl ghcr.io/sdsc-ord/shacl:latest validate -datafile /data/validation-data.ttl)"
-          echo EOF
-        } >> "$GITHUB_OUTPUT"
+        docker run -v /var/run/docker.sock:/var/run/docker.sock -v ${{ github.workspace }}/${{ inputs.validation-data }}:/data/validation-data.ttl ghcr.io/sdsc-ord/shacl:latest validate -datafile /data/validation-data.ttl"
     - if: ${{ inputs.validation-rules != 'None' }}
       shell: bash
       run: |
-        echo "validation_report=$(docker run -v /var/run/docker.sock:/var/run/docker.sock -v ${{ inputs.validation-data }}:/data/validation-data.ttl -v ${{ inputs.validation-rules }}:/data/validation-rules.ttl ghcr.io/sdsc-ord/shacl:latest validate -datafile /data/validation-data.ttl -shapesfile /data/validation-rules.ttl)" >> "$GITHUB_OUTPUT"
+        {
+          echo 'message<<EOF'
+          echo "$(docker run -v /var/run/docker.sock:/var/run/docker.sock -v ${{ github.workspace }}/${{ inputs.validation-data }}:/data/validation-data.ttl -v ${{ github.workspace }}/${{ inputs.validation-rules }}:/data/validation-rules.ttl ghcr.io/sdsc-ord/shacl:latest validate -datafile /data/validation-data.ttl -shapesfile /data/validation-rules.ttl)"
+          echo EOF
+        } >> "$GITHUB_OUTPUT"
