--- a/action.yml
+++ b/action.yml
@@ -30,11 +30,11 @@ runs:
       shell: bash
       run: |
         {
-          echo '$REPORT<<EOF'
+          echo 'REPORT<<EOF'
           echo "$(docker run -v /var/run/docker.sock:/var/run/docker.sock -v ${{ github.workspace }}/${{ inputs.validation-data }}:/data/validation-data.ttl ghcr.io/sdsc-ord/shacl:latest validate -datafile /data/validation-data.ttl)"
           echo EOF
         } >> "$GITHUB_ENV"
-        echo ${{ env.REPORT }}
+        echo $REPORT
     - if: ${{ inputs.validation-rules != 'None' }}
       shell: bash
       run: |
