Moving printing to a separate last step

--- a/action.yml
+++ b/action.yml
@@ -29,12 +29,12 @@ runs:
     - if: ${{ inputs.validation-rules == 'None' }}
       shell: bash
       run: |
+        delimiter="$(openssl rand -hex 8)"
         {
-          echo 'REPORT<<EOF'
+          echo 'REPORT<<${delimiter}'
           echo "$(docker run -v /var/run/docker.sock:/var/run/docker.sock -v ${{ github.workspace }}/${{ inputs.validation-data }}:/data/validation-data.ttl ghcr.io/sdsc-ord/shacl:latest validate -datafile /data/validation-data.ttl)"
-          echo EOF
+          echo ${delimiter}
         } >> "$GITHUB_ENV"
-        echo $REPORT
     - if: ${{ inputs.validation-rules != 'None' }}
       shell: bash
       run: |
@@ -43,3 +43,6 @@ runs:
           echo "$(docker run -v /var/run/docker.sock:/var/run/docker.sock -v ${{ github.workspace }}/${{ inputs.validation-data }}:/data/validation-data.ttl -v ${{ github.workspace }}/${{ inputs.validation-rules }}:/data/validation-rules.ttl ghcr.io/sdsc-ord/shacl:latest validate -datafile /data/validation-data.ttl -shapesfile /data/validation-rules.ttl)"
           echo EOF
         } >> "$GITHUB_OUTPUT"
+    - name: post-report
+      shell: bash
+      run: echo $REPORT
