--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,11 +8,14 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-      - name: Valid data
+      - name: valid-data
         uses: ./
         with:
           validation-data: assets/data-correct.ttl
-      - name: Invalid data
+      - name: invalid-data
         uses: ./
+        continue-on-error: true
         with:
           validation-data: assets/data-incorrect.ttl
+      - run: echo "Invalid data was indeed invalid"
+        if: job.steps.invalid-data.status == failure()
