Remove output from action and add condition for test to fail when invalid data has no exit code 1

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -3,7 +3,7 @@ name: Test GHA
 on: push
 
 jobs:
-  test-correct:
+  test-gha:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -19,3 +19,5 @@ jobs:
           validation-data: assets/data-incorrect.ttl
       - run: echo "Invalid data was indeed invalid"
         if: job.steps.invalid-data.status == failure()
+      - run: exit 1
+        if: job.steps.invalid-data.status == success()
